# dls-simpsons-classification

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test_environment.py
DataSphere/: Dockerfile  create_dataset.ipynb  train.ipynb
notebooks/: 0.2-rusmux-loaders-testing.ipynb
src/: utils.py
src/data/: __init__.py  get_dataset.py  get_loader.py
src/models/: __init__.py  _train_config.py  _train_functions.py  custom_models.py  train_model.py
src/visualization/: tensorboard.py  visualize.py
